# internet_route_verification

./: .gitignore  ALIASES.md  ARTIFACTS.md  README.md  TODO.md  download_ribs.py  parse.py  parse_test.ipynb  pyproject.toml
route_policy_cmp/: Cargo.toml
route_policy_cmp/src/: bgp.rs  bloom.rs  cmd.rs  fs.rs  irr.rs  lex.rs  lib.rs  main.rs  parse.rs  serde.rs
route_policy_cmp/src/bgp/: cmp.rs  filter.rs  map.rs  peering.rs  query.rs  report.rs  stats.rs  trie.rs  verbosity.rs  visited.rs  wrapper.rs
route_policy_cmp/src/irr/: worker.rs
route_policy_cmp/src/lex/: action.rs  community.rs  dump.rs  filter.rs  lines.rs  mp_import.rs  peering.rs  rpsl_object.rs
route_policy_cmp/src/parse/: action.rs  address_prefix.rs  aut_num.rs  aut_sys.rs  dump.rs  filter.rs  lex.rs  mp_import.rs  peering.rs  router_expr.rs  set.rs
route_policy_cmp/src/test/: bgp.rs  bloom.rs  lex.rs  mod.rs  notebook.rs  parse.rs
route_verification/: .python-version  CHANGELOG.md  Cargo.toml  pyproject.toml
route_verification/as_path_regex/: CHANGELOG.md  Cargo.toml
route_verification/as_path_regex/src/: char_map.rs  interpreter.rs  lib.rs  tests.rs  walker.rs
route_verification/as_rel/: CHANGELOG.md  Cargo.toml
route_verification/as_rel/src/: lib.rs  relationship.rs  tests.rs
route_verification/bgp/: CHANGELOG.md  Cargo.toml
route_verification/bgp/src/: cmp.rs  filter.rs  lib.rs  peering.rs  query.rs  report.rs  stats.rs  tests.rs  verbosity.rs  wrapper.rs
route_verification/bgpmap/: CHANGELOG.md  Cargo.toml
route_verification/bgpmap/src/: lib.rs  tests.rs
route_verification/bloom/: Cargo.toml
route_verification/bloom/src/: lib.rs  tests.rs
route_verification/common_regex/: CHANGELOG.md  Cargo.toml
route_verification/common_regex/src/: lib.rs  set.rs  tests.rs
route_verification/graph/: CHANGELOG.md  Cargo.toml
route_verification/graph/src/: lib.rs  tests.rs
route_verification/io/: CHANGELOG.md  Cargo.toml
route_verification/io/src/: cmd.rs  lib.rs
route_verification/ir/: CHANGELOG.md  Cargo.toml
route_verification/ir/src/: address_prefix.rs  aut_num.rs  aut_sys.rs  filter.rs  intermediate_repr.rs  lib.rs  mp_import.rs  peering.rs  router_expr.rs  set.rs  tests.rs
route_verification/irr/: CHANGELOG.md  Cargo.toml
route_verification/irr/src/: lib.rs  mbrs.rs  stats.rs  tests.rs  worker.rs
route_verification/lex/: CHANGELOG.md  Cargo.toml
route_verification/lex/src/: ast.rs  community.rs  lib.rs  lines.rs  peering.rs  rpsl_object.rs  stats.rs  test_util.rs  tests.rs
route_verification/parse/: CHANGELOG.md  Cargo.toml
route_verification/parse/src/: action.rs  address_prefix.rs  aut_sys.rs  dump.rs  filter.rs  ir.rs  lex.rs  lib.rs  mp_import.rs  peering.rs  router_expr.rs  set.rs  tests.rs
route_verification/ph_map/: Cargo.toml
route_verification/ph_map/src/: lib.rs  tests.rs
route_verification/rib_stats/: CHANGELOG.md  Cargo.toml
route_verification/rib_stats/src/: main.rs
route_verification/rpslyzer/: CHANGELOG.md  Cargo.toml  README.md
route_verification/shared_struct/: CHANGELOG.md  Cargo.toml
route_verification/shared_struct/src/: action.rs  lib.rs  stats.rs
route_verification/src/: bgp.rs  bloom.rs  evcxr_examples.rs  fs.rs  lib.rs  main.rs  parse.rs
route_verification/src/bgp/: cmp.rs  map.rs  peering.rs  report.rs
route_verification/src/evcxr_examples/: as_appeared_in_rules.rs  as_compatible_w_bgpq3.rs  as_neighbors_vs_rules.rs  as_path_scan_all_ribs.rs  as_path_set_all_ribs.rs  as_route_stats.rs  as_set_graphing.rs  as_stats.rs  as_w_routes_wo_aut_num.rs  as_w_single_rs_export.rs  bgpq3_compatible_rules.rs  collect_source.rs  community_filter.rs  count_asn_in_peering.rs  count_path_sets.rs  count_router_info.rs  filter_as.rs  filter_percentages.rs  flatten_as_set.rs  last_modified.rs  object_referred_in_rules.rs  relaxed_filter_rules_tech_c.rs  route_stats.rs  specific_line.rs  transit_as_rules.rs
route_verification/src/irr/: worker.rs
route_verification/src/lex/: community.rs
route_verification/src/parse/: action.rs  filter.rs  lex.rs  mp_import.rs  peering.rs  router_expr.rs
route_verification/src/test/: bloom.rs  mod.rs  notebook.rs  parse.rs
route_verification/stat_route_objects/: CHANGELOG.md  Cargo.toml
route_verification/stat_route_objects/src/: lib.rs  main.rs
rpsl_lexer/: aut_num.py  dump.py  filter_set.py  lex.py  lines.py  parse.py  peering_set.py  publish.sh  pyproject.toml  rpsl_object.py
rpsl_lexer/src/rpsl_lexer/: aut_num.py  filter_set.py  lines.py  parse.py  peering_set.py  piped.py
rpsl_lexer/tests/: action_w_db.py  afi_w_db.py  export_w_db.py  import_w_db.py  mp_export_w_db.py  mp_filter_w_db.py  mp_import_w_db.py  mp_peering_w_db.py  save_lex_db.py  test_lex.py  test_lines.py  test_parse.py
scripts/: Cargo.toml  pyproject.toml
scripts/scripts/: __init__.py  csv_fields.py  csv_file_names_from_github_release.js  csv_files.py  download_src_data.py  rib_names_from_github_release.js
scripts/scripts/actions/: email_mntner.py  find_relaxed.py
scripts/scripts/fig/: __init__.py  as_all_stacked_area.py  as_all_stacked_area_distin.py  as_all_stacked_area_distin_presentation.py  as_bgpq3_rules_cdf.py  as_bgpq3_rules_cdf_presentation.py  as_pair_all_stacked_area.py  as_pair_spec_stacked_area.py  as_pair_stacked_area.py  as_pair_unrec_stacked_area.py  as_rules_cdf.py  as_spec_all_stacked_area.py  as_spec_stacked_area.py  as_stacked_area.py  as_unrec_all_stacked_area.py  as_unrec_stacked_area.py  colors.py  dataframes.py  last_modified.py  main.py  route_all_stacked_area.py  route_first_hop_all_stacked_area.py  route_port_stacked_area.py  route_spec_stacked_area.py  route_unrec_stacked_area.py
scripts/scripts/stats/: as_all_all_some.py  as_all_corr.py  as_all_some.py  as_pair_all_all_some.py  as_pair_all_some.py  as_pair_spec_all_all_some.py  as_rules_corr.py  as_rules_fitting.py  as_set_size_fitting.py  as_spec_all_all_some.py  as_unrec_all_breakdown.py  imports_exports.py  object_appearance_table.py  route_all_all_some.py  route_all_some.py  route_first_hop.py  (+4 more)
scripts/src/: main.rs
(+68 files in other folders)
