[tool.poetry]
name = "rpsl-lexer"
version = "0.1.0"
description = "RPSL lexer for Internet Route Verification."
authors = ["Steven Hé (Sīchàng) <stevensichanghe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyparsing = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
