[package]
name = "route_policy_cmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
lazy-regex = "2.5.0"
log = "0.4.17"
maplit = "1.0.2"
rayon = "1.7.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["unbounded_depth"] }
