[package]
name = "route_policy_cmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chardetng = "0.1.17"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
env_logger = "0.10.0"
ip_network_table-deps-treebitmap = "0.5.0"
ipnet = { version = "2.7.2", features = ["serde"] }
itertools = "0.10.5"
lazy-regex = "2.5.0"
log = "0.4.17"
rayon = "1.7.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["unbounded_depth"] }
serde_with = "3.0.0"

[dev-dependencies]
maplit = "1.0.2"
net-literals = "0.2.0"
