[workspace]
members = ["as_rel", "bgp", "bgpmap", "bloom", "io", "irr", "lex", "parse"]

[package]
name = "route_verification"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chardetng = "0.1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
env_logger = "0.10"
log = "0.4"
rayon = "1.7"

as_path_regex = { package = "route_verification_as_path_regex", path = "./as_path_regex" }
as_rel = { package = "route_verification_as_rel", path = "./as_rel" }
bgp = { package = "route_verification_bgp", path = "./bgp" }
bloom = { package = "route_verification_bloom", path = "./bloom" }
io = { package = "route_verification_io", path = "./io" }
irr = { package = "route_verification_irr", path = "./irr" }
lex = { package = "route_verification_lex", path = "./lex" }
parse = { package = "route_verification_parse", path = "./parse" }

[dev-dependencies]
dashmap = "5.5"
itertools = "0.11"
net-literals = "0.2"
polars = { version = "0.31", features = ["describe"] }
