[workspace]
members = [
    "as_rel",
    "bgp",
    "bgpmap",
    "bloom",
    "io",
    "irr",
    "lex",
    "parse",
    "ph_map",
]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bit-vec = "0.6"
bzip2 = "0.4.4"
chardetng = "0.1"
const_format = "0.2.31"
dashmap = "5.5"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
env_logger = "0.10"
hashbrown = { version = "0.14.0", features = ["rayon"] }
ipnet = { version = "2.8", features = ["serde"] }
itertools = "0.11"
lazy-regex = "3.0"
log = "0.4"
maplit = "1.0"
net-literals = "0.2"
once_cell = "1.18.0"
polars = { version = "0.32", features = ["describe"] }
quickdiv = "0.1"
quickphf = "0.1"
quickphf_codegen = "0.1"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
thiserror = "1.0.44"

as_path_regex = { package = "route_verification_as_path_regex", path = "./as_path_regex" }
as_rel = { package = "route_verification_as_rel", path = "./as_rel" }
bgp = { package = "route_verification_bgp", path = "./bgp" }
bgpmap = { package = "route_verification_bgpmap", path = "./bgpmap" }
bloom = { package = "route_verification_bloom", path = "./bloom" }
common_regex = { package = "route_verification_common_regex", path = "./common_regex" }
io = { package = "route_verification_io", path = "./io" }
irr = { package = "route_verification_irr", path = "./irr" }
lex = { package = "route_verification_lex", path = "./lex" }
parse = { package = "route_verification_parse", path = "./parse" }
ph_map = { package = "route_verification_ph_map", path = "./ph_map" }

[package]
name = "route_verification"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
encoding_rs_io.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true

as_path_regex.workspace = true
as_rel.workspace = true
bgp.workspace = true
bloom.workspace = true
common_regex.workspace = true
io.workspace = true
irr.workspace = true
lex.workspace = true
parse.workspace = true

[dev-dependencies]
dashmap.workspace = true
itertools.workspace = true
net-literals.workspace = true
polars.workspace = true
