[workspace]
members = [
    "as_rel",
    "bgp",
    "bgpmap",
    "bloom",
    "io",
    "ir",
    "irr",
    "lex",
    "parse",
    "shared_struct",
]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bit-vec = "0.6"
bzip2 = "0.4.4"
chardetng = "0.1"
const_format = "0.2"
dashmap = "5.5"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
env_logger = "0.10"
hashbrown = { version = "0.14", features = ["rayon"] }
ipnet = { version = "2.9", features = ["serde"] }
itertools = "0.12"
lazy-regex = "3.0"
log = "0.4"
maplit = "1.0"
net-literals = "0.2"
once_cell = "1.18.0"
polars = { version = "0.35", features = ["describe"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
thiserror = "1.0"

as_path_regex = { package = "route_verification_as_path_regex", path = "./as_path_regex", version = "0.1.0" }
as_rel = { package = "route_verification_as_rel", path = "./as_rel", version = "0.1.0" }
bgp = { package = "route_verification_bgp", path = "./bgp", version = "0.2.0" }
bgpmap = { package = "route_verification_bgpmap", path = "./bgpmap", version = "0.1.0" }
bloom = { package = "route_verification_bloom", path = "./bloom", version = "0.1.0" }
common_regex = { package = "route_verification_common_regex", path = "./common_regex", version = "0.1.0" }
io = { package = "route_verification_io", path = "./io", version = "0.1.0" }
ir = { package = "route_verification_ir", path = "./ir", version = "0.1.0" }
irr = { package = "route_verification_irr", path = "./irr", version = "0.1.1" }
lex = { package = "route_verification_lex", path = "./lex", version = "0.1.0" }
parse = { package = "route_verification_parse", path = "./parse", version = "0.1.0" }
shared_struct = { package = "route_verification_shared_struct", path = "./shared_struct", version = "0.1.0" }

[workspace.package]
description = "Parse RPSL in the IRR to verify observed BGP routes"
license = "MIT"
repository = "https://github.com/SichangHe/internet_route_verification"

[package]
name = "route_verification"
version = "0.2.0"
edition = "2021"

description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
encoding_rs_io.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true

as_path_regex.workspace = true
as_rel.workspace = true
bgp.workspace = true
bloom.workspace = true
common_regex.workspace = true
io.workspace = true
ir.workspace = true
irr.workspace = true
lex.workspace = true
parse.workspace = true

[dev-dependencies]
dashmap.workspace = true
itertools.workspace = true
net-literals.workspace = true
polars.workspace = true
