[project]
name = "scripts"
version = "0.0.0"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "stevensichanghe@gmail.com" },
]
dependencies = [
    "fitter>=1.7.1",
    "matplotlib>=3.9.1",
    "pandas>=2.2.2",
    "pandas-stubs>=2.2.2.240603",
    "requests>=2.32.3",
    "scipy>=1.14.0",
    "ipython>=8.26.0",
    "pyarrow>=17.0.0",
    "rpsl-lexer>=0.3.0",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
