[package]
name = "route_verification_as_path_regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.44"

common_regex = { package = "route_verification_common_regex", path = "../common_regex" }

[dev-dependencies]
anyhow = "1.0.72"
