[package]
name = "route_verification_as_path_regex"
version = "0.1.0"
edition = "2021"

description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true

common_regex.workspace = true

[dev-dependencies]
anyhow.workspace = true
