[package]
name = "route_verification_bgp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
ipnet.workspace = true
itertools.workspace = true
lazy-regex.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

as_path_regex.workspace = true
as_rel.workspace = true
bloom.workspace = true
bgpmap.workspace = true
io.workspace = true
lex.workspace = true
parse.workspace = true

[dev-dependencies]
maplit.workspace = true
