[package]
name = "route_verification_common_regex"
version = "0.1.0"
edition = "2021"

description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format.workspace = true
lazy-regex.workspace = true
once_cell.workspace = true
