[package]
name = "route_verification_graph"
version = "0.1.1"
edition = "2021"
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hashbrown.workspace = true
log.workspace = true
petgraph = { version = "0.6.4", default_features = false }

ir.workspace = true
