[package]
name = "route_verification_ir"
version = "0.3.1"
edition = "2021"

description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ipnet.workspace = true
itertools.workspace = true
lazy-regex.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

common_regex.workspace = true
io.workspace = true
shared_struct.workspace = true

[dev-dependencies]
maplit.workspace = true
net-literals.workspace = true
