[package]
name = "route_verification_lex"
version = "0.2.1"
edition = "2021"

description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lazy-regex.workspace = true
log.workspace = true
maplit = { workspace = true, optional = true }
rayon.workspace = true
serde.workspace = true

shared_struct.workspace = true

[dev-dependencies]
anyhow.workspace = true
maplit.workspace = true
serde_json.workspace = true

[features]
test_util = ["maplit"]
