[package]
name = "route_verification_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ipnet = { version = "2.8", features = ["serde"] }
itertools = "0.11"
lazy-regex = "3.0"
log = "0.4"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

io = { package = "route_verification_io", path = "../io" }
lex = { package = "route_verification_lex", path = "../lex" }

[dev-dependencies]
maplit = "1.0"
net-literals = "0.2"

lex = { package = "route_verification_lex", path = "../lex", features = [
    "test_util",
] }
