[package]
name = "route_verification_rib_stats"
version = "0.1.4"
edition = "2021"
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
env_logger.workspace = true
flate2.workspace = true
human-duration = "0.1"
log.workspace = true
rayon.workspace = true
route_verification.workspace = true
